# xemu-test

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  docker_entry.sh  pyproject.toml  setup.py  test.py  test.sh  test_main.py
.github/workflows/: build.yml  build_docker_image.yml  test.yml
scripts/: build_test_data.sh  docker_entry.sh
test-container/: Dockerfile  docker_entry.sh
test-pgraph/: README.md  config.cnf  config.json
test-timers/: main.c
test-xbe/: .gitignore  Makefile  main.c
xemutest/: __init__.py  __main__.py  ci.py  comparators.py  env.py  hdd_manager.py  test.py  test_base.py  test_nxdk_pgraph_tests.py  test_xbe.py  video_capture.py  xemu_manager.py
xemutest/tests/: test_nxdk_pgraph_tests.py  test_xbe.py
